@@ -1,3 +1,7 @@
+2005-04-06  Jan Nieuwenhuizen  <jan.nieuwenhuizen@aspiratie.nl>
+
+	* site/about/automated-engraving/schubert.html (href): Fix link.
+
 2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/index.html: Name 2.2 old, 2.0 ancient.
